--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "baselines/HuPR"]
 	path = baselines/HuPR
-	url = https://github.com/robert80203/HuPR-A-Benchmark-for-Human-Pose-Estimation-Using-Millimeter-Wave-Radar.git
+	url = git@github.com:luckyyf0517/HuPR.git
