--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "baselines/mmMesh"]
 	path = baselines/mmMesh
 	url = git@github.com:luckyyf0517/mmMesh.git
+[submodule "baselines/mmDiff"]
+	path = baselines/mmDiff
+	url = https://github.com/FanJunqiao/mmDiff.git
